# glTF_2.0_Importer

./: .gitignore  .gitmodules  CMakeLists.txt  Gizmo.gltf  README.md  clean.sh
Dependencies/include/: Common.h  glTFImporter.h
Dependencies/source/: glTFImporter.cpp  main.cpp
